#RI-4361 - fix redisStack recommendations #RI-4362 - fix titles #RI-4365 - fix background color for voting btn #RI-4359 - fix recommendations collapse #RI-4360 - fix multiple telemetry events

--- a/redisinsight/ui/src/components/live-time-recommendations/components/recommendation/styles.module.scss
+++ b/redisinsight/ui/src/components/live-time-recommendations/components/recommendation/styles.module.scss
@@ -59,6 +59,17 @@
   .link {
     color: var(--externalLinkColor) !important;
   }
+
+  :global {
+    .vote__btn {
+      &:hover,
+      &:focus,
+      &.selected {
+        transform: none;
+        background-color: var(--liveRecommendationVoteBgColor) !important;
+      }
+    }
+  }
 }
 
 .actions {
