--- a/redisinsight/ui/src/styles/themes/light_theme/_light_theme.lazy.scss
+++ b/redisinsight/ui/src/styles/themes/light_theme/_light_theme.lazy.scss
@@ -197,4 +197,5 @@
   --recommendationLiveBorderColor: #{$recommendationLiveBorderColor};
   --triggerIconColor: #{$triggerIconColor};
   --triggerIconActiveColor: #{$triggerIconActiveColor};
+  --liveRecommendationVoteBgColor: #{$separatorColor};
 }
